--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^1.12.4",
+    "jquery-confirm": "^3.3.4",
     "normalize.css": "^8.0.1",
     "store": "^2.0.12"
   }
